# tatbot

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DEPENDENCY_UPDATE_SUMMARY.md  MIGRATION_GUIDE.md  README.md  README_state_server.md  SMALL_MODEL_READABILITY_AUDIT.md  TOOLING_USABILITY_AUDIT.md  TOOLS_REFACTOR_SUMMARY.md  apriltag_codex.py  apriltag_jaxlie_cv2.py  apriltag_jules.py  config_trossen.py  current_dependencies_baseline.txt  dependency_analysis_report.md  dependency_update_log.md  opencode.json  pyproject.toml  tatbot.py  tatbot_connectedcomponents.py
src/: _bot.py  _cam.py  _ik.py  _log.py  _plan.py  _scan.py  _tag.py  _viz.py  bot_config.py  bot_plan.py  context.sh  gen_sketch.py  gen_svg.py  pyproject.toml  run_mcp.py  run_scan.py
src/0.1/: pyproject.toml  tatbot.py
src/0.2/: .env.example  _bot.py  _ik.py  _log.py  _path.py  context.sh  design.py  gemini25pro_stencil.py  ik.py  lerobot_record.py  log.py  o3_stencil.py  path.py  pattern.py  pattern_calib.py  pattern_image.py  policy.py  pyproject.toml  record.py  record_iktarget.py  record_iktest.py  record_path.py  record_pattern.py  record_policy.py  record_toolpath.py  robot.py  smolvla_benchmark.py  stencil.py  style.md  tech.md  teleop_iktarget.py  teleop_toolpath.py  train.sh  vizer_teleop.py
src/0.3/: _bot.py  _cam.py  _ik.py  _ink.py  _log.py  _net.py  _path.py  _plan.py  _scan.py  _tag.py  _viz.py  bot.py  bot_config.py  bot_plan.py  bot_record.py  bot_scan.py  gen_bench.py  gen_image.py  gen_sketch.py  pyproject.toml  run_bot.py  run_mcp.py  run_tag.py  run_viz.py  tag.py  viz_plan.py  viz_scan.py
src/0.4/: .env.example  _bot.py  _ik.py  _ink.py  _map.py  _plan.py  _scan.py  _tag.py  _viz.py  bot_config.py  bot_plan.py  bot_scan.py  context.sh  gen_bench.py  pyproject.toml  run_mcp.py
src/00_warp/: Dockerfile.x86-meerkat
src/01_circle/: pyproject.toml
src/02_splatviz/: demo.py  pyproject.toml
src/03_ik/: demo_bi.py  pyproject.toml
src/04_realsense/: pyproject.toml
src/05_bimanual/: demo.py  pyproject.toml
src/06_patches/: demo.py  pyproject.toml
src/conf/: config.yaml  nodes.yaml
src/conf/arms/: default.yaml
src/conf/cam/: vggt.yaml
src/conf/inks/: black.yaml  black_orange.yaml  default.yaml  red_blue.yaml
src/conf/mcp/: default.yaml  eek.yaml  hog.yaml  ojo.yaml  ook.yaml  oop.yaml  rpi1.yaml  rpi2.yaml  trossen-ai.yaml
src/conf/meta/: debug_mode.yaml  double.yaml  hand.yaml  high_resolution.yaml  koi.yaml  production.yaml  quick_test.yaml  snail.yaml  tatbotlogo.yaml  tiger.yaml  wow.yaml  zorya.yaml
src/conf/poses/left/: ready.yaml  ready_2.yaml  ready_old.yaml  sleep.yaml
src/conf/poses/right/: ready.yaml  sleep.yaml
src/conf/redis/: default.yaml
src/conf/scenes/: default.yaml  flower.yaml  hand.yaml  tatbotlogo.yaml  test.yaml  zorya.yaml
src/conf/skins/: default.yaml  fakeskin_sponge_10x7.yaml  fakeskin_sponge_5x5.yaml
src/conf/tags/: default.yaml
src/conf/tui/: default.yaml
src/conf/urdf/: default.yaml
src/draw-circle/: pyproject.toml
src/draw-ui/: demo.py  pyproject-agx.toml  pyproject-oop.toml  pyproject.toml  pyproject_agx.toml  pyproject_oop.toml
src/ik-pyroki/: pyproject.toml
src/new/: bot.py  data.py  gen.py  net.py  pyproject.toml  tag.py  utils.py  viz.py
src/new/bot/: lerobot.py  trossen.py  urdf.py
src/new/data/: __init__.py  cam.py  ink.py  plan.py  pose.py  strokebatch.py
src/new/net/: _net.py
src/new/tag/: _cam.py
src/new/utils/: log.py
src/new/viz/: plan.py  scan.py
src/old/: .env.example  _ik.py  _ink.py  _scan.py  _tag.py  bot_scan.py  gen_svg.py
src/realsense-viser/: pyproject.toml
src/stencil-warp/: requirements.base.txt
src/tatbot/: compat.py  config_schema.py  main.py  mcp_server_viz.py
src/tatbot/bot/: extrinsics.py  intrinsics_rs.py  record.py  scan.py  trossen.py  trossen_config.py  trossen_homing.py  urdf.py
src/tatbot/bot/ops/: __init__.py  align.py  base.py  record.py  sense.py  stroke.py
src/tatbot/cam/: depth.py  extrinsics.py  intrinsics_ip.py  intrinsics_rs.py  scan.py  tracker.py  validation.py  vggt_demo_viser.py  vggt_runner.py
src/tatbot/data/: __init__.py  arms.py  base.py  cams.py  inks.py  node.py  pose.py  scene.py  skin.py  stroke.py  tags.py  urdf.py
src/tatbot/hydra_plugins/: search_path_plugin.py
src/tatbot/map/: base.py  view_obj.py  view_ply.py
src/tatbot/mcp/: __init__.py  auth.py  base.py  client.py  gpu_proxy.py  handlers.py  middleware.py  models.py  ojo.py  ook.py  oop.py  openapi.py  rpi1.py  rpi2.py  server.py  trossen-ai.py
src/tatbot/ops/: __init__.py  align.py  base.py  record.py  record_align.py  record_sense.py  record_stroke.py  reset.py  sense.py  stroke.py
src/tatbot/state/: __init__.py  client.py  manager.py  models.py  schemas.py
src/tatbot/tools/: __init__.py  base.py  registry.py
src/tatbot/tools/gpu/: __init__.py  convert_strokes.py  models.py  vggt_recon.py
src/tatbot/tools/robot/: __init__.py  align.py  models.py  reset.py  sense.py  stroke.py
src/tatbot/tools/state/: __init__.py  models.py  state_tools.py
src/tatbot/tools/system/: __init__.py  list_nodes.py  list_recordings.py  list_scenes.py  models.py  ping_nodes.py
src/tatbot/tools/tui/: __init__.py  models.py  tui_tools.py
src/tatbot/tools/viz/: __init__.py  control.py  map_viz.py  (+4 more)
src/tatbot/tui/: __init__.py  constants.py  monitor.py
src/tatbot/utils/: colors.py  constants.py  exceptions.py  gen_prom_config.py  gpu.py  gpu_conversion.py  jnp_types.py  joystick_inspect.py  log.py  mode_toggle.py  net.py  node_config.py  plymesh.py  test_joystick.py  validation.py
src/tatbot/viz/: base.py  hs_pc.py  map.py  o3d_map.py  rs_pc.py  stroke.py  strokes.py  teleop.py  vggt_compare.py
src/tui-claude/: README.md  __init__.py  node_monitor.py  nodes_meta.yaml  test_ssh.py  tui.py
src/tui-cursor/: README.md  nodes_config.py  nodes_meta.py  nodes_meta.yaml  remote_stats.py  requirements.txt  ssh_pool.py  tui.py
src/tui-opencode/: README.md  __init__.py  node_monitor.py  nodes_meta.yaml  requirements.txt  ssh_pool.py  tui.py
src/viz-viser/: pyproject.toml
(+576 files in other folders)
