[project.urls]
homepage = "https://github.com/hu-po/tatbot"
issues = "https://github.com/hu-po/tatbot/issues"
discord = "https://discord.gg/pPAFwndTJd"

[project]
name = "tatbot"
version = "0.6.1"
description="tattoo robot"
authors = [
    { name = "Hugo Ponte", email = "hu.po.xyz@gmail.com" },
]
maintainers = [
    { name = "Hugo Ponte", email = "hu.po.xyz@gmail.com" },
]
keywords = ["robotics", "tattoo", "robot", "mcp", "jax", "lerobot"]
license = "MIT"
readme = "README.md"
requires-python = "==3.11.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "huggingface-hub~=0.34.4",
    "jaxtyping>=0.2.25,<1.0.0",
    "jaxlie>=1.3.4,<2.0.0",
    "mcp==1.12.4",
    "paramiko==4.0.0",
    "pyroki @ git+https://github.com/chungmin99/pyroki.git@main#egg=pyroki",
    "pyyaml~=6.0.2",
    "safetensors~=0.6.2",
    "tyro~=0.9.27",
    "hydra-core~=1.3.2",
    "pydantic~=2.11.7",
    "omegaconf~=2.3",
    "hydra-zen",
    "pydantic-numpy",
    "pytest>=8.4.1",
    "pydantic-yaml",
]

[project.scripts]
tatbot = "tatbot.main:main"
tatbot-mcp = "tatbot.mcp.server:main"

[project.optional-dependencies]
bot = [
    "lerobot[tatbot] @ git+https://github.com/hu-po/lerobot.git@main",
    "trossen-arm==1.8.5",
    "evdev==1.9.2",
]
cam = [
    "lerobot[intelrealsense] @ git+https://github.com/hu-po/lerobot.git@main",
    "pupil-apriltags==1.0.4.post11",
    "pyrealsense2==2.56.5.9235; platform_system=='Linux'",
]
dev = [
    "isort",
    "ruff",
    "pre-commit",
    "mypy",
    "types-PyYAML",
    "types-paramiko",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autobuild",
    "myst-parser>=2.0",
    "furo>=2023.9.10",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.5.0",
]
gen = [
    "open3d>=0.18.0",
    "potpourri3d==1.3",
]
gpu = [
    "jax[cuda12]>=0.4.0,<0.5.0",
    "jaxls",
]
img = [
    "opencv-python==4.12.0.88",
    "Pillow>=9.0.0,<11.0.0",
]
viz = [
    "viser==1.0.4",
    "pyliblzfse>=0.4.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tatbot"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 110
target-version = "py311"
fix = true
show-fixes = true
exclude = ["tests/artifacts/**/*.safetensors", "*_pb2.py", "*_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
