[project]
name = "tatbot"
version = "0.2.0"
requires-python = "==3.11.10"
dependencies = [
    "lerobot[tatbot,intelrealsense,smolvla] @ git+https://github.com/hu-po/lerobot.git@main",
    "viser==0.2.23",
    "Pillow>=9.0.0,<11.0.0",
    "trossen-arm==1.8.2",
    "pyrealsense2==2.55.1.6486",
    "pyroki @ git+https://github.com/chungmin99/pyroki.git@main#egg=pyroki",
    "jax[cuda12]>=0.4.0,<0.5.0",
    "jaxtyping>=0.2.25,<1.0.0",
    "jaxlie>=1.3.4,<2.0.0",
    "opencv-python==4.11.0.86",
    "pyyaml==6.0.2",
    "replicate==1.0.7",
    "scikit-image==0.25.2",
    "networkx==3.5",
]

[tool.setuptools]
py-modules = ["_bot", "_ik", "_log",  "pattern", "pattern_image", "pattern_calib",  "record_iktest", "record_pattern", "record_policy"]