[project]
name = "patches"
version = "0.0.1"
requires-python = "==3.11.10"
dependencies = [
    "viser==0.2.23",
    "Pillow>=9.0.0,<11.0.0",
    "trossen-arm==1.8.1",
    "pyrealsense2==2.55.1.6486",
    "pyroki @ git+https://github.com/chungmin99/pyroki.git@main#egg=pyroki",
    "jax[cuda12]>=0.4.0,<0.5.0",
    "jaxtyping>=0.2.25,<1.0.0",
    "jaxlie>=1.3.4,<2.0.0",
]