[project]
name = "design"
version = "0.0.1"
requires-python = "==3.12.2"
dependencies = [
    "viser==0.2.23",
    "numpy>=1.20.0,<2.0.0",
    "Pillow>=9.0.0,<11.0.0",
    "trossen-arm==1.8.1",
    "pyroki @ git+https://github.com/chungmin99/pyroki.git@main#egg=pyroki",
    "jax==0.4.27",
    "jaxlib @ https://storage.googleapis.com/jax-releases/cuda12/jaxlib-0.4.27+cuda12.cudnn89-cp312-cp312-manylinux2014_x86_64.whl"
]